# guiguts

./: .gitattributes  .gitignore  .perltidyrc  .project  .project.txt  .travis.yml  CHANGELOG.md  COMPILING.txt  INSTALL.md  INSTALL.txt  Makefile  README.md  README.txt  RELEASING.md  STYLE_GUIDE.md  THANKS.md  THANKS.txt  TROUBLESHOOTING.md  UPGRADE.md  Utilities.pm  cpanfile  format_files.sh  ggmanual.html  guiguts.bat  guiguts.pl  header.txt  headerdefault.txt  hotkeys.txt  labels_da.rc  labels_en.rc  make.bat  mktables.pl  packup.bat  regref.txt  run_guiguts.bat  setting.rc  todo.txt  update_unicore.pl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: perltidy.yml
Python27/Scripts/: csscapture-script.py  csscapture.exe.manifest  csscombine-script.py  csscombine.exe.manifest  cssparse-script.py  cssparse.exe.manifest  epubmaker-script.py  epubmaker.exe.manifest  pilconvert.py  pildriver.py  pilfile.py  pilfont.py  pilprint.py  rst2html.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
data/: labels_da.rc  labels_da_default.rc  labels_de.rc  labels_en.rc  labels_fr.rc  labels_sv.rc
lib/Guiguts/: ASCIITables.pm  CharacterTools.pm  ErrorCheck.pm  FileMenu.pm  Footnotes.pm  GifMaker.pm  Greek.pm  Greekgifs.pm  HTMLConvert.pm  HelpMenu.pm  Highlight.pm  KeyBindings.pm  LineNumberText.pm  MenuStructure.pm  MultiLingual.pm  PageNumbers.pm  PageSeparators.pm  Preferences.pm  ReflowGG.pm  SearchReplaceMenu.pm  SelectionMenu.pm  SpellCheck.pm  StatusBar.pm  Tests.pm  TextProcessingMenu.pm  TextUnicode.pm  Utilities.pm  WordFrequency.pm
lib/Tk/: LineNumberText.pm  StatusBar.pm  ToolBar.pm
lib/ppvchecks/: pphtml.pl  ppvimage.pl
lib/unicore/: Blocks.pl
perl/lib/: AnyDBM_File.pm  AutoLoader.pm  AutoSplit.pm  B.pm  Benchmark.pm  ByteLoader.pm  CGI.pm  CPAN.pm  Carp.pm  Config.pm  Cwd.pm  DB.pm  Digest.pm  DirHandle.pm  Dumpvalue.pm  DynaLoader.pm  Encode.pm  English.pm  Env.pm  Errno.pm  Exporter.pm  Fatal.pm  Fcntl.pm  FileCache.pm  FileHandle.pm  FindBin.pm  IO.pm  LWP.pm  MD5.pm  Memoize.pm  NEXT.pm  O.pm  Opcode.pm  POSIX.pm  PerlBin.pm  PerlIO.pm  SDBM_File.pm  Safe.pm  SelectSaver.pm  SelfLoader.pm  (+45 more)
scannos/: Greek.rc  GreekGrc.rc  regex.rc
scannos/GutWrenchGutAxe/: GAaccent.txt  GAothers.txt  GAscanno.txt  GWimposs.txt  GWimprob.txt  GWscanoE.txt  GWscanoF.txt  GWscanoO.txt  README.txt  accent_w.rc  others_r.rc  others_s.rc  others_w.rc  scanno_s.rc  scanno_w.rc
src/: ggmanual.html  guiguts.command  guiguts.pl  headerdefault.txt  hotkeys.txt  install_cpan_modules.pl  regref.txt  run_guiguts.bat  spawn.pl
src/data/: README.md  copyright_dict_de.txt  copyright_dict_en.txt  copyright_dict_fr.txt  dict_en_default.txt  labels_da_default.rc  labels_en_default.rc
src/scannos/: GreekBB3.rc  en-commn.rc  misspelled.rc  regex.rc
src/tests/: blgccheckbaseline.txt  bookloupebaseline.txt  cssvalidatebaseline.txt  epubfriendly.html  errorcheck.html  errorcheckbaseline.txt  greek.txt  htmlvalidatebaseline.txt  jeebiesbaseline.txt  jeebiescheckbaseline.txt  pphtmlbaseline.txt  pptext.txt  pptxtbaseline.txt  ppvimagebaseline.txt  spellcheck.txt  testfilebaseline.txt  testfilefixup.txt  testfilefixupbaseline.txt  testfilewordfreq.txt  testhtml1.txt  testhtml1baseline.html  testhtml2baseline.html  testhtml3.txt  testhtml3baseline.html  testhtml4baseline.html  testhtml5baseline.html  textcheck.txt  tidybaseline.txt
src/wordlist/: en-common.txt
tests/: bookloupebaseline.txt  cssvalidatebaseline.txt  epubfriendly.html  errorcheck.html  greek.txt  htmlvalidatebaseline.txt  linkcheckbaseline.txt  poetry.html  poetry.txt  pphtmlbaseline.txt  pptxtbaseline.txt  ppvimagebaseline.txt  searchreplace.txt  spellcheck.txt  spellquerybaseline.txt  temp.txt  testfile.txt  testfilebaseline.txt  testfilefixup.txt  testfilefixupbaseline.txt  testfilewordfreq.txt  testhtml1.txt  testhtml1baseline.html  testhtml2.txt  testhtml2baseline.html  testhtml3.txt  testhtml3baseline.html  testhtml4.txt  testhtml4baseline.html  testhtml5.txt  testhtml5baseline.html  textcheck.txt  tidybaseline.txt  xhtmlvalidatebaseline.txt
tools/: README.md  adjust-package-contents.sh  build-tools.sh  package-tools.sh
tools/DPCustomMono/: README.md  package.sh
tools/DPSansMono/: README.md  package.sh
tools/W3C/: README.md  package.sh  pgtei-extensions.ent  xhtml.soc  xhtml11.socold  xml1.dcl
tools/bookloupe/: Makefile.am  Makefile.in  README  README.md  configure  configure.ac  package.sh
tools/bookloupe/bl/: Makefile.am  Makefile.in  bl.h  mkdtemp.c  mkdtemp.h  path.c  path.h  print.c  print.h  spawn.c  spawn.h  textfileutils.c  textfileutils.h
tools/bookloupe/bookloupe/: HTMLlat1.ent  HTMLspecial.ent  HTMLsymbol.ent  Makefile.am  Makefile.in  bookloupe.c  bookloupe.typ.in  gen-html-entities.sh
tools/bookloupe/doc/: Makefile.am  Makefile.in  README-0.99  bookloupe.txt  loupe-test.txt
tools/bookloupe/test/: Makefile.am  Makefile.in
tools/bookloupe/test/bookloupe/: Makefile.am  Makefile.in  long-line.tst  non-ascii.tst
tools/bookloupe/test/compatibility/: Makefile.am  Makefile.in  abbreviation.tst  before-comma.tst  before-period.tst  brackets.tst  control-characters.tst  dashes.tst  digits.tst  double-punctuation.tst  ellipsis.tst  embedded-cr.tst  embedded-lf.tst  example.tst  extra-period.tst  genatives.tst  grave-quotes.tst  he-be.tst  hebe-jeebies.tst  html-symbol.tst  html-tag.tst  long-line.tst  mail-from.tst  markup.tst  mismatched-quotes.tst  missing-space.tst  non-ascii.tst  periods.tst  scannos.tst  short-line.tst  single-quotes.tst  spaced-doublequote.tst  spaced-punctuation.tst  unmarked-paragraph.tst  unusual-characters.tst  user-defined-typo.tst  windows-1252.tst
tools/bookloupe/test/harness/: Makefile.am  Makefile.in  loupe-test.c  testcase.c  testcase.h  testcaseinput.c  testcaseinput.h  testcaseio.c  testcaseio.h  testcaseparser.c  testcaseparser.h  warningsparser.c  warningsparser.h
tools/ebookmaker/: README.md  add_ebookmaker_to_path.sh  package.sh
(+1033 files in other folders)
