TESTS_ENVIRONMENT=BOOKLOUPE=../../bookloupe/bookloupe ../harness/loupe-test
TESTS=missing-space.tst spaced-punctuation.tst html-tag.tst html-symbol.tst \
	spaced-doublequote.tst mismatched-quotes.tst he-be.tst digits.tst \
	extra-period.tst ellipsis.tst short-line.tst abbreviation.tst \
	example.tst non-ascii.tst embedded-lf.tst markup.tst \
	user-defined-typo.tst brackets.tst single-quotes.tst grave-quotes.tst \
	dashes.tst control-characters.tst unusual-characters.tst \
	windows-1252.tst periods.tst long-line.tst unmarked-paragraph.tst \
	hebe-jeebies.tst mail-from.tst scannos.tst before-comma.tst \
	before-period.tst double-punctuation.tst genatives.tst embedded-cr.tst

dist_pkgdata_DATA=$(TESTS)
